# dlorg

./: .directory  .gitignore  README.md  config.json  dlorg.py  organizer.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
download_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
organizer/: organizer.py
