[tool.poetry]
name = "dlorg"
version = "2.0"
description = "A Python script to organize your downloads folder by file extensions and watch for new files."
authors = ["pyrix <probablynotyasho@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/at-pyrix/download-organizer"
repository = "https://github.com/at-pyrix/download-organizer"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.4"

[tool.poetry.scripts]
# Define the CLI command and the function to call
dlorg = "dlorg:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
