[tool.poetry]
name = "dlorg"
version = "2.2"
description = "A Python script to organize your downloads folder by file extensions and mimetypes."
authors = ["pyrix <probablynotyasho@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/at-pyrix/download-organizer"
repository = "https://github.com/at-pyrix/download-organizer"
include = ["dlorg/config.json"]

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.4"
python-magic = "^0.4.27"

[tool.poetry.scripts]
dlorg = "dlorg:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
